[tool.poetry]
name = "poetry-export-test2"
version = "0.1.0"
description = ""
authors = ["Michael Aquilina <michaelaquilina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipdb = "^0.13.3"
ipython = "^7.16.1"
hypothesis = "^5.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
